--- a/Coursera.html
+++ b/Coursera.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name ="viewport" content = "width=device-width, initial-scale=1">
     <title>Document</title>
-</head>
-<body>
-    
+    <link rel="stylesheet" href="./stylecours.css" />
+  </head>
+  <body>
+    <!-- <div class="row"> -->
+        <div class="cl-lg-4 cl-md-6 cl-sx-1">Div1</div>
+        <div class="cl-lg-4 cl-md-6 cl-sx-1">Div2</div>
+        <div class="cl-lg-4 cl-md-7 cl-sx-1">Div3</div>
+    <!-- </div> -->
 </body>
 </html>
